--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ cache:
     - node_modules
 # tarvis生命周期执行顺序详见官网文档
 before_install:
-- git config --global user.name "Godi13"
-- git config --global user.email "mqzq9388@gmail.com"
+- git config --global user.name "mianhk"
+- git config --global user.email "gcyu@gmail.com"
 # 由于使用了yarn，所以需要下载，如不用yarn这两行可以删除
 - curl -o- -L https://yarnpkg.com/install.sh | bash
 - export PATH=$HOME/.yarn/bin:$PATH
@@ -33,5 +33,5 @@ after_success:
 - git add --all .
 - git commit -m "Travis CI Auto Builder"
 # 这里的 REPO_TOKEN 即之前在 travis 项目的环境变量里添加的
-- git push --quiet --force https://$REPO_TOKEN@github.com/Godi13/Godi13.github.io.git
+- git push --quiet --force https://$REPO_TOKEN@github.com/mianhk/mianhk.github.io.git
   master
