--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ cache:
     - node_modules
 # tarvis生命周期执行顺序详见官网文档
 before_install:
+- export TZ='Asia/Shanghai' # 更改时区
 - git config --global user.name "mianhk"
 - git config --global user.email "gcyu@gmail.com"
 # 由于使用了yarn，所以需要下载，如不用yarn这两行可以删除
@@ -30,7 +31,7 @@ after_success:
 - cd ./public
 - git init
 - git add --all .
-- git commit -m "Travis CI Auto Builder"
+- git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"
 # 这里的 REPO_TOKEN 即之前在 travis 项目的环境变量里添加的
 - git push --quiet --force https://$REPO_TOKEN@github.com/mianhk/mianhk.github.io.git
   master
