新增本地搜索

--- a/_config.yml
+++ b/_config.yml
@@ -81,11 +81,11 @@ douban:
   timeout: 10000 #optional
  
 #本地搜索
-#search:
-  #path: search.xml
-  #field: post
-  #format: html
-  #limit: 10000
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
