解决旧博客时间的问题

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ before_install:
 - export TZ='Asia/Shanghai' # 更改时区
 - git config --global user.name "mianhk"
 - git config --global user.email "gcyu@gmail.com"
+- chmod +x git_reset_mtime.py
+- python3 ./git_reset_mtime.py
 # 由于使用了yarn，所以需要下载，如不用yarn这两行可以删除
 #- curl -o- -L https://yarnpkg.com/install.sh | bash
 #- export PATH=$HOME/.yarn/bin:$PATH
