修改更新旧文章

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_install:
 - export TZ='Asia/Shanghai' # 更改时区
 - git config --global user.name "mianhk"
 - git config --global user.email "gcyu@gmail.com"
+- git ls-files | while read file; do touch -d $(git log -1 --format="@%ct" "$file") "$file"; done
 # - chmod +x git_reset_mtime.py
 # - python3 ./git_reset_mtime.py
 # 由于使用了yarn，所以需要下载，如不用yarn这两行可以删除
