--- a/.travis.yml
+++ b/.travis.yml
@@ -14,18 +14,28 @@ cache:
   apt: true
   directories:
     - node_modules
+
+#提醒，失败会发邮件
+notifications:
+    email:
+        recipients:
+            - gcyu25@gmail.com
+        on_success: change
+        on_failure: always
+
 # tarvis生命周期执行顺序详见官网文档
 before_install:
 - export TZ='Asia/Shanghai' # 更改时区
 - git config --global user.name "mianhk"
 - git config --global user.email "gcyu@gmail.com"
-- git ls-files | while read file; do touch -d $(git log -1 --format="@%ct" "$file") "$file"; done
+# - git ls-files | while read file; do touch -d $(git log -1 --format="@%ct" "$file") "$file"; done
 # - chmod +x git_reset_mtime.py
 # - python3 ./git_reset_mtime.py
 # 由于使用了yarn，所以需要下载，如不用yarn这两行可以删除
 #- curl -o- -L https://yarnpkg.com/install.sh | bash
 #- export PATH=$HOME/.yarn/bin:$PATH
 - npm install -g hexo-cli
+- chmod +x ./publish-to-gh-pages.sh
 install:
 # 不用yarn的话这里改成 npm i 即可
 #- yarn
@@ -33,12 +43,22 @@ install:
 script:
 - hexo clean
 - hexo g
-after_success:
-- cd ./public
-- git init
-- git add --all .
-- git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"
-# 这里的 REPO_TOKEN 即之前在 travis 项目的环境变量里添加的
-- git push --quiet --force https://$REPO_TOKEN@github.com/mianhk/mianhk.github.io.git
-  master
+
+after_script:
+    - ./publish-to-gh-pages.sh
+    
+env:
+    global:
+        # Github Pages
+        - GH_REF: github.com/mianhk/mianhk.github.io.git
+        # Coding Pages
+        # - CD_REF: git.coding.net/Leafney/Leafney.coding.me.git
+# after_success:
+# - cd ./public
+# - git init
+# - git add --all .
+# - git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"
+# # 这里的 REPO_TOKEN 即之前在 travis 项目的环境变量里添加的
+# - git push --quiet --force https://$REPO_TOKEN@github.com/mianhk/mianhk.github.io.git
+#   master
 
