修改更新旧文章23

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ node_js: stable
 branches:
   only:
   - source
-# git:
-#     depth: false
+git:
+    depth: false
 #     submodules: false
 # 缓存，可以节省集成的时间，这里我用了yarn，如果不用可以删除
 cache:
