--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ before_install:
 - git config --global user.name "mianhk"
 - git config --global user.email "gcyu@gmail.com"
 # - git ls-files | while read file; do touch -d $(git log -1 --format="@%ct" "$file") "$file"; done
-# - chmod +x git_reset_mtime.py
-# - python3 ./git_reset_mtime.py
+- chmod +x git_reset_mtime.py
+- python3 ./git_reset_mtime.py
 # 由于使用了yarn，所以需要下载，如不用yarn这两行可以删除
 #- curl -o- -L https://yarnpkg.com/install.sh | bash
 #- export PATH=$HOME/.yarn/bin:$PATH
