--- a/package.json
+++ b/package.json
@@ -3,26 +3,42 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.3.9"
+    "version": "3.8.0"
+  },
+  "scripts": {
+    "clean": "npm run clean:yuque && hexo clean",
+    "clean:yuque": "DEBUG=yuque-hexo.* yuque-hexo clean",
+    "deploy": "hexo deploy",
+    "publish": "npm run clean && npm run deploy",
+    "dev": "hexo s",
+    "sync": "DEBUG=yuque-hexo.* yuque-hexo sync",
+    "reset": "npm run clean:yuque && npm run sync"
   },
   "dependencies": {
-    "hexo": "^3.2.0",
+    "hexo": "^3.8.0",
     "hexo-deployer-git": "^0.3.0",
-    "hexo-douban": "^0.2.14",
-    "hexo-generator-archive": "^0.1.4",
+    "hexo-douban": "^1.0.6",
+    "hexo-generator-archive": "^0.1.5",
     "hexo-generator-baidu-sitemap": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.0",
-    "hexo-generator-search": "^2.2.5",
+    "hexo-generator-search": "^2.3.0",
     "hexo-generator-searchdb": "^1.0.8",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-helper-live2d": "^3.1.0",
-    "hexo-renderer-ejs": "^0.2.0",
-    "hexo-renderer-marked": "^0.2.10",
+    "hexo-renderer-ejs": "^0.3.1",
+    "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-server": "^0.3.3",
+    "hexo-wordcount": "^6.0.1",
+    "yuque-hexo": "^1.2.2"
+  },
+  "yuqueConfig": {
+    "baseUrl": "https://www.yuque.com/api/v2",
+    "login": "mianhk",
+    "repo": "gaqqwc",
+    "mdNameFormat": "slug",
+    "postPath": "source/_posts/yuque"
   }
 }
