--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -141,6 +141,7 @@ links:
   天才小三斤: https://www.fucksec.com/
   MengBo'Li: https://blog.imdst.com/
   Timothy: https://xiaozhou.net/
+  Myths: https://blog.mythsman.com/
 
   
 # Sidebar Avatar
