add friend HuangAo

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -142,7 +142,7 @@ links:
   MengBo'Li: https://blog.imdst.com/
   Timothy: https://xiaozhou.net/
   Myths: https://blog.mythsman.com/
-
+  HuangAo: http://www.huangao.net/
   
 # Sidebar Avatar
 in theme directory(source/images): /images/avatar.jpg
