--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "reset": "npm run clean:yuque && npm run sync"
   },
   "dependencies": {
+    "gulp": "^4.0.0",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^3.0.1",
     "hexo": "^3.8.0",
     "hexo-deployer-git": "^0.3.0",
     "hexo-douban": "^1.0.6",
