--- a/_config.yml
+++ b/_config.yml
@@ -104,3 +104,28 @@ deploy:
    github: git@github.com:mianhk/mianhk.github.io.git
    coding: git@git.coding.net:mianhk/mianhk.coding.me.git
  branch: master
+
+
+
+# hexo-neat
+# 博文压缩
+neat_enable: true
+# 压缩html
+neat_html:
+  enable: true
+  exclude:
+# 压缩css  
+neat_css:
+  enable: true
+  exclude:
+    - '**/*.min.css'
+# 压缩js
+neat_js:
+  enable: true
+  mangle: true
+  output:
+  compress:
+  exclude:
+    - '**/*.min.js'
+    - '**/jquery.fancybox.pack.js'
+    - '**/index.js'
