--- a/_config.yml
+++ b/_config.yml
@@ -109,23 +109,23 @@ deploy:
 
 # hexo-neat
 # 博文压缩
-# neat_enable: true
-# # 压缩html
-# neat_html:
-#   enable: true
-#   exclude:
-# # 压缩css  
-# neat_css:
-#   enable: true
-#   exclude:
-#     - '**/*.min.css'
-# # 压缩js
-# neat_js:
-#   enable: true
-#   mangle: true
-#   output:
-#   compress:
-#   exclude:
-#     - '**/*.min.js'
-#     - '**/jquery.fancybox.pack.js'
-#     - '**/index.js'
+neat_enable: true
+# 压缩html
+neat_html:
+  enable: true
+  exclude:
+# 压缩css  
+neat_css:
+  enable: false
+  exclude:
+    - '**/*.min.css'
+# 压缩js
+neat_js:
+  enable: false
+  mangle: true
+  output:
+  compress:
+  exclude:
+    - '**/*.min.js'
+    - '**/jquery.fancybox.pack.js'
+    - '**/index.js'
