重新修改目录和友链1

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -72,7 +72,7 @@ menu_icons:
   home: home
   about: user
   categories: th
-  friends: friends
+  friends: tags
   #schedule: calendar
   tags: tags
   archives: archive
