重新修改目录和友链2

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -56,8 +56,8 @@ menu:
   #commonweal: /404/
   books: /books   
   movies: /movies
-  friends: /archives/friends
-  about: /archives/about
+  friends: /categories/friends
+  about: /categories/about
   
 # Enable/Disable menu icons.
 # Icon Mapping:
