--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -56,8 +56,8 @@ menu:
   #commonweal: /404/
   books: /books   
   movies: /movies
-  friends: /categories/friends
-  about: /categories/about
+  friends: /categories/friends/index.html
+  about: /categories/about/index.html
   
 # Enable/Disable menu icons.
 # Icon Mapping:
@@ -72,7 +72,7 @@ menu_icons:
   home: home
   about: user
   categories: th
-  friends: tags
+  friends: user
   #schedule: calendar
   tags: tags
   archives: archive
