--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -6,7 +6,7 @@
 favicon: favicon.ico
 
 # Set default keywords (Use a comma to separate)
-keywords: "hello,world"
+keywords: "mianhk"
 
 # Set rss to false to disable feed link.
 # Leave rss as empty to use site's feed link.
@@ -56,8 +56,8 @@ menu:
   #commonweal: /404/
   books: /books   
   movies: /movies
-  大佬们: /social
-  我: /about
+  social: /social
+  about: /about
   
 # Enable/Disable menu icons.
 # Icon Mapping:
