重新修改目录和友链-参考别人的,修改menu前缀问题1

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -72,7 +72,7 @@ menu_icons:
   home: home
   about: user
   categories: th
-  friends: user
+  social: user
   #schedule: calendar
   tags: tags
   archives: archive
