修改的简单主题1

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ title: Mianhk's notes
 subtitle: 这个人很懒，动不动就不想写
 description: 余国聪
 author: mianhk
-language: zh-Hans
+# language: zh-Hans
+language: zh-CN
 timezone: 
 
 # URL
@@ -63,9 +64,9 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-#theme: landscape
-theme: next
-# theme: maupassant
+# theme: aircloud
+# theme: next
+theme: maupassant
 
 # 自动生成sitemap
 
@@ -130,3 +131,6 @@ neat_js:
     - '**/*.min.js'
     - '**/jquery.fancybox.pack.js'
     - '**/index.js'
+
+
+# sidebar-avatar: source/avatar.png      # use absolute URL, seeing it's used in both `/` and `/about/`
