--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 # theme: aircloud
 # theme: next
-theme: maupassant
+theme: maupassant-hexo
 
 # 自动生成sitemap
 
