--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ before_install:
 # 由于使用了yarn，所以需要下载，如不用yarn这两行可以删除
 #- curl -o- -L https://yarnpkg.com/install.sh | bash
 #- export PATH=$HOME/.yarn/bin:$PATH
+- npm install -g cnpm --registry=https://registry.npm.taobao.org
 - npm install -g hexo-cli
 - chmod +x ./publish-to-gh-pages.sh
 install:
