--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,8 @@ before_install:
 #- curl -o- -L https://yarnpkg.com/install.sh | bash
 #- export PATH=$HOME/.yarn/bin:$PATH
 - npm install -g cnpm --registry=https://registry.npm.taobao.org
+- sudo cnpm install hexo-renderer-jade --save
+- sudo cnpm install hexo-renderer-sass --save
 - npm install -g hexo-cli
 - chmod +x ./publish-to-gh-pages.sh
 install:
