--- a/.travis.yml
+++ b/.travis.yml
@@ -34,15 +34,15 @@ before_install:
 # 由于使用了yarn，所以需要下载，如不用yarn这两行可以删除
 #- curl -o- -L https://yarnpkg.com/install.sh | bash
 #- export PATH=$HOME/.yarn/bin:$PATH
-- npm install -g cnpm --registry=https://registry.npm.taobao.org
-- sudo cnpm install hexo-renderer-jade --save
-- sudo cnpm install hexo-renderer-sass --save
+# - npm install -g cnpm --registry=https://registry.npm.taobao.org
 - npm install -g hexo-cli
 - chmod +x ./publish-to-gh-pages.sh
 install:
 # 不用yarn的话这里改成 npm i 即可
 #- yarn
 - npm i
+- npm install hexo-renderer-sass --save
+- npm install hexo-renderer-jade --save
 script:
 - hexo clean
 - hexo g
