--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,9 @@ title: Mianhk's notes
 subtitle: 这个人很懒，动不动就不想写
 description: 余国聪
 author: mianhk
-language: zh-Hans
+# language: zh-Hans
 # language: zh-CN
+language: zh
 timezone: 
 
 # URL
@@ -64,8 +65,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-# theme: aircloud
-theme: next
+theme: aircloud
+# theme: next
 # theme: maupassant-hexo
 
 # 自动生成sitemap
@@ -133,4 +134,49 @@ neat_js:
     - '**/index.js'
 
 
-# sidebar-avatar: source/avatar.png      # use absolute URL, seeing it's used in both `/` and `/about/`
+
+# 以下是aircloud的配置
+sidebar-avatar: img/avatar.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+
+# 一些社交平台地址，支持以下几种：
+weibo_username:     3286578617
+zhihu_username:     ai-er-lan-xue-da
+github_username:    AirCloud
+# twitter_username:   iconie_alloy
+# facebook_username:  xiaotao.nie.5
+# linkedin_username:  小涛-聂-80964aba
+
+# Build settings
+anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
+
+
+# Friends
+# 友情链接
+friends: [
+    {
+        title: "10000H",
+        href: "https://www.10000h.top"
+    },{
+        title: "Xiaotao's Page",
+        href: "https://niexiaotao.com"
+    },{
+        title: "It helps SEO",
+        href: "#"
+    }
+]
+
+#comment:
+#  type: gitment
+#  id: your-id-created-by-https://github.com/settings/applications/new
+#  secret: your-secret-created-by-https://github.com/settings/applications/new
+#  owner: aircloud
+#  repo: hexo-aircloud-blog
+
+comment:
+   type: disqus
+   script: 'https://airclouds-blog.disqus.com/embed.js'
+
+donate:
+  img: img/donate.jpg
+  content: 感谢鼓励
+
