--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ subtitle: 这个人很懒，动不动就不想写
 description: 余国聪
 author: mianhk
 # language: zh-Hans
-# language: zh-CN
-language: zh
+language: zh-CN
+# language: zh
 timezone: 
 
 # URL
@@ -65,9 +65,9 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: aircloud
+# theme: aircloud
 # theme: next
-# theme: maupassant-hexo
+theme: maupassant-hexo
 
 # 自动生成sitemap
 
@@ -139,9 +139,9 @@ neat_js:
 sidebar-avatar: img/avatar.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # 一些社交平台地址，支持以下几种：
-weibo_username:     3286578617
-zhihu_username:     ai-er-lan-xue-da
-github_username:    AirCloud
+# weibo_username:     3286578617
+# zhihu_username:     ai-er-lan-xue-da
+github_username:    mianhk
 # twitter_username:   iconie_alloy
 # facebook_username:  xiaotao.nie.5
 # linkedin_username:  小涛-聂-80964aba
@@ -152,18 +152,18 @@ anchorjs: true                          # if you want to customize anchor. check
 
 # Friends
 # 友情链接
-friends: [
-    {
-        title: "10000H",
-        href: "https://www.10000h.top"
-    },{
-        title: "Xiaotao's Page",
-        href: "https://niexiaotao.com"
-    },{
-        title: "It helps SEO",
-        href: "#"
-    }
-]
+# friends: [
+#     {
+#         title: "10000H",
+#         href: "https://www.10000h.top"
+#     },{
+#         title: "Xiaotao's Page",
+#         href: "https://niexiaotao.com"
+#     },{
+#         title: "It helps SEO",
+#         href: "#"
+#     }
+# ]
 
 #comment:
 #  type: gitment
