--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "clean": "npm run clean:yuque && hexo clean",
     "clean:yuque": "DEBUG=yuque-hexo.* yuque-hexo clean",
-    "deploy": "hexo deploy",
+    "deploy": "npm run clean:yuque && hexo clean && npm run sync && hexo deploy",
     "publish": "npm run clean && npm run deploy",
     "dev": "hexo s",
     "sync": "DEBUG=yuque-hexo.* yuque-hexo sync",
