重新修改配置文件2

--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,8 @@ douban:
  
 #本地搜索
 search:
-  path: search.xml
+  # path: search.xml
+  path: search.json
   field: post
   format: html
   limit: 10000
