--- a/.travis.yml
+++ b/.travis.yml
@@ -42,11 +42,13 @@ install:
 # 不用yarn的话这里改成 npm i 即可
 #- yarn
 - npm i
-# - npm install -g yuque-hexo --save
+- npm install -g yuque-hexo --save
 - npm install hexo-renderer-sass --save
 - npm install hexo-renderer-jade --save
 script:
 - hexo clean
+- clean:yuque
+- hexo sync
 - hexo g
 
 after_script:
