修改travis文件，解决不同步的问题,添加hexo，忘了， 傻逼了

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ install:
 - npm install hexo-renderer-jade --save
 script:
 - hexo clean
-- clean:yuque
+- hexo clean:yuque
 - hexo sync
 - hexo g
 
