--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,8 @@ install:
 - npm install hexo-renderer-jade --save
 script:
 - hexo clean
-- hexo sync
+- yuque-hexo clean
+- yuque-hexo sync
 - hexo g
 
 after_script:
