--- a/.travis.yml
+++ b/.travis.yml
@@ -51,8 +51,8 @@ script:
 - yuque-hexo sync
 - hexo g
 
-after_script:
-    - ./publish-to-gh-pages.sh
+# after_script:
+#     - ./publish-to-gh-pages.sh
     
 env:
     global:
@@ -60,12 +60,12 @@ env:
         - GH_REF: github.com/mianhk/mianhk.github.io.git
         # Coding Pages
         # - CD_REF: git.coding.net/Leafney/Leafney.coding.me.git
-# after_success:
-# - cd ./public
-# - git init
-# - git add --all .
-# - git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"
-# # 这里的 REPO_TOKEN 即之前在 travis 项目的环境变量里添加的
-# - git push --quiet --force https://$REPO_TOKEN@github.com/mianhk/mianhk.github.io.git
-#   master
+after_success:
+- cd ./public
+- git init
+- git add --all .
+- git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"
+# 这里的 REPO_TOKEN 即之前在 travis 项目的环境变量里添加的
+- git push --quiet --force https://$REPO_TOKEN@github.com/mianhk/mianhk.github.io.git
+  master
 
