--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ notifications:
 before_install:
 - export TZ='Asia/Shanghai' # 更改时区
 - git config --global user.name "mianhk"
-- git config --global user.email "gcyu@gmail.com"
+- git config --global user.email "gcyu25@gmail.com"
 # - git ls-files | while read file; do touch -d $(git log -1 --format="@%ct" "$file") "$file"; done
 - chmod +x git_reset_mtime.py
 - python3 ./git_reset_mtime.py
