--- a/.travis.yml
+++ b/.travis.yml
@@ -66,6 +66,5 @@ after_success:
 - git add --all .
 - git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"
 # 这里的 REPO_TOKEN 即之前在 travis 项目的环境变量里添加的
-- git push --quiet --force https://$REPO_TOKEN@github.com/mianhk/mianhk.github.io.git
-  master
+- git push --quiet --force https://$REPO_TOKEN@github.com/mianhk/mianhk.github.io.git master
 
