--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "reset": "npm run clean:yuque && npm run sync"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "hexo": "^3.8.0",
     "hexo-deployer-git": "^0.3.0",
     "hexo-douban": "^1.0.8",
@@ -27,7 +28,7 @@
     "hexo-generator-searchdb": "^1.0.8",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-neat": "^1.0.4",
+    "hexo-neat": "^1.0.8",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-pug": "0.0.5",
@@ -35,13 +36,18 @@
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.3.3",
     "hexo-wordcount": "^6.0.1",
-    "yuque-hexo": "^1.3.0"
+    "yuque-hexo": "^1.6.0"
   },
   "yuqueConfig": {
     "baseUrl": "https://www.yuque.com/api/v2",
     "login": "mianhk",
     "repo": "gaqqwc",
     "mdNameFormat": "slug",
-    "postPath": "source/_posts/yuque"
+    "postPath": "source/_posts/yuque",
+    "onlyPublished": true,
+    "token":"EXAuwC8CQkdmkfbtfc5nPMgwGGa26sANGcM01MGr"
+  },
+  "devDependencies": {
+    "yuque-hexo": "^1.6.0"
   }
 }
