--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Mianhk's notes
 subtitle: 这个人很懒，动不动就不想写
-description: 余国聪
+description: mianhk
 author: mianhk
 # language: zh-Hans
 # language: zh-CN
