--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,8 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 # theme: aircloud
 # theme: next
-theme: maupassant-hexo
+theme: even
+# theme: maupassant-hexo
 
 # 自动生成sitemap
 
