--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-pug": "0.0.5",
     "hexo-renderer-sass": "^0.3.2",
+    "hexo-renderer-scss": "^1.2.0",
     "hexo-renderer-stylus": "^0.3.1",
+    "hexo-renderer-swig": "^1.1.0",
     "hexo-server": "^0.3.3",
     "hexo-wordcount": "^6.0.1",
     "yuque-hexo": "^1.6.5"
