--- a/themes/maupassant-hexo/_config.yml
+++ b/themes/maupassant-hexo/_config.yml
@@ -57,7 +57,7 @@ donate:
   btc_key: ## Bitcoin key, e.g. 1KuK5eK2BLsqpsFVXXSBG5wbSAwZVadt6L
   paypal_url: ## Paypal URL, e.g. https://www.paypal.me/tufu9441
 post_copyright:
-  enable: false ## If you want to display the copyright info after each post, please set the value to true and fill the following items on your need.
+  enable: true ## If you want to display the copyright info after each post, please set the value to true and fill the following items on your need.
   author: mianhk ## Your author name, e.g. tufu9441
   copyright_text: 本文所有权归博主所有，转载请注明署名、出处！Thanks ##版权信息## Your copyright text, e.g. The author owns the copyright, please indicate the source reproduced.
   
@@ -117,6 +117,9 @@ timeline:
 js: js
 css: css
 
+# auto_excerpt:
+#   enable: true
+#   length: 150
 
 busuanzi:
   enable: true ## 开启或关闭不蒜子
