--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "npm run clean:yuque && hexo clean",
     "clean:yuque": "DEBUG=yuque-hexo.* yuque-hexo clean",
     "deploy": "npm run clean:yuque && hexo clean && npm run sync && hexo deploy",
-    "build": "npm run clean;hexo generate -f",
+    "build": "rm -rf public;hexo generate -f",
     "publish": "npm run clean && npm run deploy",
     "dev": "hexo s",
     "sync": "DEBUG=yuque-hexo.* yuque-hexo sync",
