--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
       run: |
         npm install
         npm run build
+        cat public/index.html
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
