--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-renderer-swig": "^1.1.0",
     "hexo-server": "^0.3.3",
-    "hexo-wordcount": "^6.0.1",
-    "yuque-hexo": "^1.6.5"
+    "hexo-wordcount": "^6.0.1"
   },
   "yuqueConfig": {
     "baseUrl": "https://www.yuque.com/api/v2",
@@ -51,6 +50,6 @@
     "token": "EXAuwC8CQkdmkfbtfc5nPMgwGGa26sANGcM01MGr"
   },
   "devDependencies": {
-    "yuque-hexo": "^1.6.5"
+    "hexo-cli": "^3.1.0"
   }
 }
