--- a/_config.yml
+++ b/_config.yml
@@ -3,20 +3,18 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Mianhk's notes
-subtitle: 这个人很懒，动不动就不想写
-description: mianhk
+title: mianhk
+subtitle: mianhk
+description:
 author: mianhk
-# language: zh-Hans
-language: zh-CN
-# language: zh
-timezone: 
+language: en
+timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://www.yuguocong.cn/
+url: http://www.yuguocong.cn
 root: /
-permalink: :title.html
+permalink: :year/:month/:day/:title/
 permalink_defaults:
 
 # Directory
@@ -28,6 +26,7 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+  - html/*
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -59,151 +58,44 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 12
+per_page: 10
 pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-# theme: aircloud
-# theme: next
 theme: even
-# theme: maupassant-hexo
-
-# 自动生成sitemap
-
-# 豆瓣
-douban:
-  user: 177022660
-  builtin: true 
-  book:
-    title: 'Book'
-    quote: '我看的书'
-  movie:
-    title: 'Movies'
-    quote: '我看的电影'
-  timeout: 10000 #optional
- 
-#本地搜索
-search:
-  # path: search.xml
-  path: search.json
-  field: post
-  format: html
-  limit: 10000
-
-
-#宠物
-# live2d:
-#   model: miku
-#   bottom: -30
-#   mobileShow: false
-
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
- type: git
- repository:
-   github: git@github.com:mianhk/mianhk.github.io.git
-   coding: git@git.coding.net:mianhk/mianhk.coding.me.git
- branch: master
+  type: git
+  repo: git@github.com:Shell32-Natsu/Shell32-Natsu.github.io.git
+  branch: master
+  message: Hexo deploy.
+#  type:
 
+# Custom
+# Markdown-it config
+## Docs: https://github.com/celsomiranda/hexo-renderer-markdown-it/wiki/
+markdown:
+  render:
+    breaks: false
+    typographer: true
+    html: true
+  anchors:
+    level: 1
+    collisionSuffix: "v"
+    #permalink: true
+    #permalinkClass: header-anchor
+    permalinkSymbol: ¶
+  plugins:
+    - markdown-it-abbr
+    - markdown-it-footnote
+    - markdown-it-ins
+    - markdown-it-sub
+    - markdown-it-sup
 
-
-# hexo-neat
-# 博文压缩
-# neat_enable: true
-# # 压缩html
-# neat_html:
-#   enable: true
-#   exclude:
-#     - '**/*.html'
-# # 压缩css  
-# neat_css:
-#   enable: true
-#   exclude:
-#     - '**/*.min.css'
-# # 压缩js
-# neat_js:
-#   enable: true
-#   mangle: true
-#   output:
-#   # compress:
-#   exclude:
-#     - '**/*.min.js'
-#     - '**/jquery.fancybox.pack.js'
-#     - '**/index.js'
-
-
-
-# 以下是aircloud的配置
-sidebar-avatar: img/avatar.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
-
-# 一些社交平台地址，支持以下几种：
-# weibo_username:     3286578617
-# zhihu_username:     ai-er-lan-xue-da
-github_username:    mianhk
-# twitter_username:   iconie_alloy
-# facebook_username:  xiaotao.nie.5
-# linkedin_username:  小涛-聂-80964aba
-
-# Build settings
-anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
-
-
-# Friends
-# 友情链接
-# friends: [
-#     {
-#         title: "10000H",
-#         href: "https://www.10000h.top"
-#     },{
-#         title: "Xiaotao's Page",
-#         href: "https://niexiaotao.com"
-#     },{
-#         title: "It helps SEO",
-#         href: "#"
-#     }
-# ]
-
-#comment:
-#  type: gitment
-#  id: your-id-created-by-https://github.com/settings/applications/new
-#  secret: your-secret-created-by-https://github.com/settings/applications/new
-#  owner: aircloud
-#  repo: hexo-aircloud-blog
-
-# comment:
-#    type: disqus
-#    script: 'https://airclouds-blog.disqus.com/embed.js'
-
-donate:
-  img: img/donate.jpg
-  content: 感谢鼓励
-  
-  
-# 下面是Aircloud的修改
-#Custom Setting Start
-
-# Site settings
-# 网站综合内容设置：
-SEOTitle: Mianhk的博客 | Mianhk's Notes
-email: gcyu25@gmail.com
-# description: "Mianhk的博客"
-keyword: ""
-
-# SNS settings
-# 一些社交平台地址，支持以下几种：
-# weibo_username:     
-# zhihu_username:     
-# github_username:    mianhk
-# twitter_username:   
-# facebook_username:  
-# linkedin_username:  
-
-# 文章样式(是否首行缩进)：
-post_style:
-  indent: 0
-  
-
+# site-map
+sitemap:
+  path: sitemap.xml
