--- a/themes/even/_config.yml
+++ b/themes/even/_config.yml
@@ -55,13 +55,13 @@ reward:
 # Social links Settings
 # ===========================================
 social:
-  email: your@email.com
+  email: gcyu25@gmail.com
   stack-overflow:
   twitter:
   facebook:
   linkedin:
   google:
-  github: https://github.com/ahonn
+  github: https://github.com/mianhk
   weibo:
   zhihu:
   douban:
