--- a/themes/even/_config.yml
+++ b/themes/even/_config.yml
@@ -125,6 +125,9 @@ utterances:
   theme: github-light # Theme: github-light | github-dark | github-dark-orange | icy-dark | dark-blue | photon-dark
   label: utterances # Issue label
 
+auto_excerpt:
+  enable: true
+  length: 200
 # ===========================================
 # Version
 # ===========================================
