--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseurl: "https://yuguocong.cn/"
+baseurl: "https://www.yuguocong.cn/"
 defaultContentLanguage: "zh-cn"
 # 网站语言, 仅在这里 CN 大写
 languageCode: "zh-CN"
