--- a/config.toml
+++ b/config.toml
@@ -106,6 +106,11 @@ theme = "LoveIt"
 
 
 [menu]
+  [[menu.main]]             # config your menu              # 配置目录
+    name = "主页"
+    weight = 1
+    identifier = "home"
+    url = "/"
   [[menu.main]]
     identifier = "posts"
     # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
@@ -133,6 +138,11 @@ theme = "LoveIt"
     url = "/categories/"
     title = ""
     weight = 3
+  #[[menu.main]]
+   # identifier = "about"
+    #name = "关于"
+    #url = "/about/"
+    #weight = 4
 
 # Hugo 解析文档的配置
 [markup]
