--- a/config.toml
+++ b/config.toml
@@ -36,74 +36,378 @@ theme = "LoveIt"
       appID = ""
       searchKey = ""
 
- # LoveIt 新增 | 0.2.0 应用图标配置
-  [params.app]
-    # 当添加到 iOS 主屏幕或者 Android 启动器时的标题, 覆盖默认标题
-    title = "LoveIt"
-    # 是否隐藏网站图标资源链接
-    noFavicon = false
-    # 更现代的 SVG 网站图标, 可替代旧的 .png 和 .ico 文件
-    svgFavicon = ""
-    # Android 浏览器主题色
-    themeColor = "#ffffff"
-    # Safari 图标颜色
-    iconColor = "#5bbad5"
-    # Windows v8-10磁贴颜色
-    tileColor = "#da532c"
-# 页面头部导航栏配置
-  [params.header]
-    # 桌面端导航栏模式 ("fixed", "normal", "auto")
-    desktopMode = "fixed"
-    # 移动端导航栏模式 ("fixed", "normal", "auto")
-    mobileMode = "auto"
-    # LoveIt 新增 | 0.2.0 页面头部导航栏标题配置
-  #[params.header.title]
-    # LOGO 的 URL
-    #logo = ""
-    # 标题名称
-    #name = ""
-    # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
-    #pre = ""
-    # 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
-    #post = ""
-    # LoveIt 新增 | 0.2.5 是否为标题显示打字机动画
-    #typeit = false
+    # LoveIt 新增 | 0.2.0 应用图标配置
+    [params.app]
+        # 当添加到 iOS 主屏幕或者 Android 启动器时的标题, 覆盖默认标题
+        title = "LoveIt"
+        # 是否隐藏网站图标资源链接
+        noFavicon = false
+        # 更现代的 SVG 网站图标, 可替代旧的 .png 和 .ico 文件
+        svgFavicon = ""
+        # Android 浏览器主题色
+        themeColor = "#ffffff"
+        # Safari 图标颜色
+        iconColor = "#5bbad5"
+        # Windows v8-10磁贴颜色
+        tileColor = "#da532c"
+    # 页面头部导航栏配置
+    [params.header]
+        # 桌面端导航栏模式 ("fixed", "normal", "auto")
+        desktopMode = "fixed"
+        # 移动端导航栏模式 ("fixed", "normal", "auto")
+        mobileMode = "auto"
+        # LoveIt 新增 | 0.2.0 页面头部导航栏标题配置
+    #[params.header.title]
+        # LOGO 的 URL
+        #logo = ""
+        # 标题名称
+        #name = ""
+        # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
+        #pre = ""
+        # 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
+        #post = ""
+        # LoveIt 新增 | 0.2.5 是否为标题显示打字机动画
+        #typeit = false
 
-# 页面底部信息配置
-  [params.footer]
-    enable = true
-    # LoveIt 新增 | 0.2.0 自定义内容 (支持 HTML 格式)
-    custom = ''
-    # LoveIt 新增 | 0.2.0 是否显示 Hugo 和主题信息
-    hugo = true
-    # LoveIt 新增 | 0.2.0 是否显示版权信息
-    copyright = true
-    # LoveIt 新增 | 0.2.0 是否显示作者
-    author = true
-    # 网站创立年份
-    since = 2019
-    # ICP 备案信息，仅在中国使用 (支持 HTML 格式)
-    icp = ""
-    # 许可协议信息 (支持 HTML 格式)
-    license = '<a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a>'
+    # 页面底部信息配置
+    [params.footer]
+        enable = true
+        # LoveIt 新增 | 0.2.0 自定义内容 (支持 HTML 格式)
+        custom = ''
+        # LoveIt 新增 | 0.2.0 是否显示 Hugo 和主题信息
+        hugo = true
+        # LoveIt 新增 | 0.2.0 是否显示版权信息
+        copyright = true
+        # LoveIt 新增 | 0.2.0 是否显示作者
+        author = true
+        # 网站创立年份
+        since = 2018
+        # ICP 备案信息，仅在中国使用 (支持 HTML 格式)
+        icp = ""
+        # 许可协议信息 (支持 HTML 格式)
+        license = '<a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a>'
 
- # LoveIt 新增 | 0.2.0 Section (所有文章) 页面配置
-  [params.section]
-    # section 页面每页显示文章数量
-    paginate = 20
-    # 日期格式 (月和日)
-    dateFormat = "01-02"
-    # RSS 文章数目
-    rss = 10
-# LoveIt 新增 | 0.2.0 List (目录或标签) 页面配置
-  [params.list]
-    # list 页面每页显示文章数量
-    paginate = 20
-    # 日期格式 (月和日)
-    dateFormat = "01-02"
-    # RSS 文章数目
-    rss = 10
+    # LoveIt 新增 | 0.2.0 Section (所有文章) 页面配置
+    [params.section]
+        # section 页面每页显示文章数量
+        paginate = 20
+        # 日期格式 (月和日)
+        dateFormat = "01-02"
+        # RSS 文章数目
+        rss = 10
 
+    # LoveIt 新增 | 0.2.0 List (目录或标签) 页面配置
+    [params.list]
+        # list 页面每页显示文章数量
+        paginate = 20
+        # 日期格式 (月和日)
+        dateFormat = "01-02"
+        # RSS 文章数目
+        rss = 10
+    
+    # 主页配置
+    [params.home]
+        # LoveIt 新增 | 0.2.0 RSS 文章数目
+        rss = 10
+        # 主页个人信息
+        [params.home.profile]
+        enable = true
+        # Gravatar 邮箱，用于优先在主页显示的头像
+        gravatarEmail = ""
+        # 主页显示头像的 URL
+        avatarURL = "/images/avatar.png"
+        # LoveIt 更改 | 0.2.7 主页显示的网站标题 (支持 HTML 格式)
+        title = ""
+        # 主页显示的网站副标题 (允许 HTML 格式)
+        subtitle = ""
+        # 是否为副标题显示打字机动画
+        typeit = true
+        # 是否显示社交账号
+        social = true
+        # LoveIt 新增 | 0.2.0 免责声明 (支持 HTML 格式)
+        disclaimer = ""
+        # 主页文章列表
+        [params.home.posts]
+        enable = true
+        # 主页每页显示文章数量
+        paginate = 6
+        # LoveIt 删除 | 0.2.0 被 params.page 中的 hiddenFromHomePage 替代
+        # 当你没有在文章前置参数中设置 "hiddenFromHomePage" 时的默认行为
+        defaultHiddenFromHomePage = false
+
+    # 作者的社交信息设置
+    [params.social]
+        GitHub = ""
+        Linkedin = ""
+        Twitter = ""
+        Instagram = ""
+        Facebook = ""
+        Telegram = ""
+        Medium = ""
+        Gitlab = ""
+        Youtubelegacy = ""
+        Youtubecustom = ""
+        Youtubechannel = ""
+        Tumblr = ""
+        Quora = ""
+        Keybase = ""
+        Pinterest = ""
+        Reddit = ""
+        Codepen = ""
+        FreeCodeCamp = ""
+        Bitbucket = ""
+        Stackoverflow = ""
+        Weibo = "https://weibo.com/u/3024507693"
+        Odnoklassniki = ""
+        VK = ""
+        Flickr = ""
+        Xing = ""
+        Snapchat = ""
+        Soundcloud = ""
+        Spotify = ""
+        Bandcamp = ""
+        Paypal = ""
+        Fivehundredpx = ""
+        Mix = ""
+        Goodreads = ""
+        Lastfm = ""
+        Foursquare = ""
+        Hackernews = ""
+        Kickstarter = ""
+        Patreon = ""
+        Steam = ""
+        Twitch = ""
+        Strava = ""
+        Skype = ""
+        Whatsapp = ""
+        Zhihu = "https://www.zhihu.com/people/yu-cong-47"
+        Douban = "https://www.douban.com/people/177022660"
+        Angellist = ""
+        Slidershare = ""
+        Jsfiddle = ""
+        Deviantart = ""
+        Behance = ""
+        Dribbble = ""
+        Wordpress = ""
+        Vine = ""
+        Googlescholar = ""
+        Researchgate = ""
+        Mastodon = ""
+        Thingiverse = ""
+        Devto = ""
+        Gitea = ""
+        XMPP = ""
+        Matrix = ""
+        Bilibili = ""
+        Discord = ""
+        DiscordInvite = ""
+        Lichess = ""
+        ORCID = ""
+        Pleroma = ""
+        Kaggle = ""
+        MediaWiki= ""
+        Plume = ""
+        HackTheBox = ""
+        RootMe= ""
+        Phone = ""
+        Email = "gcyu25@gmail.com"
+        RSS = true # LoveIt 新增 | 0.2.0
+
+  # LoveIt 更改 | 0.2.0 文章页面全局配置
+  [params.page]
+    # LoveIt 新增 | 0.2.0 是否在主页隐藏一篇文章
+    hiddenFromHomePage = false
+    # LoveIt 新增 | 0.2.0 是否在搜索结果中隐藏一篇文章
+    hiddenFromSearch = false
+    # LoveIt 新增 | 0.2.0 是否使用 twemoji
+    twemoji = false
+    # 是否使用 lightgallery
+    lightgallery = false
+    # LoveIt 新增 | 0.2.0 是否使用 ruby 扩展语法
+    ruby = true
+    # LoveIt 新增 | 0.2.0 是否使用 fraction 扩展语法
+    fraction = true
+    # LoveIt 新增 | 0.2.0 是否使用 fontawesome 扩展语法
+    fontawesome = true
+    # 是否在文章页面显示原始 Markdown 文档链接
+    linkToMarkdown = true
+    # LoveIt 新增 | 0.2.4 是否在 RSS 中显示全文内容
+    rssFullText = false
+    # LoveIt 新增 | 0.2.0 目录配置
+    [params.page.toc]
+      # 是否使用目录
+      enable = true
+      # LoveIt 新增 | 0.2.9 是否保持使用文章前面的静态目录
+      keepStatic = false
+      # 是否使侧边目录自动折叠展开
+      auto = true
+    # LoveIt 新增 | 0.2.0 代码配置
+    [params.page.code]
+      # 是否显示代码块的复制按钮
+      copy = true
+      # 默认展开显示的代码行数
+      maxShownLines = 50
+    # LoveIt 更改 | 0.2.0 KaTeX 数学公式
+    [params.page.math]
+      enable = true
+      # LoveIt 更改 | 0.2.11 默认行内定界符是 $ ... $ 和 \( ... \)
+      inlineLeftDelimiter = ""
+      inlineRightDelimiter = ""
+      # LoveIt 更改 | 0.2.11 默认块定界符是 $$ ... $$, \[ ... \], \begin{equation} ... \end{equation} 和一些其它的函数
+      blockLeftDelimiter = ""
+      blockRightDelimiter = ""
+      # KaTeX 插件 copy_tex
+      copyTex = true
+      # KaTeX 插件 mhchem
+      mhchem = true
+    # LoveIt 新增 | 0.2.0 Mapbox GL JS 配置
+    [params.page.mapbox]
+      # Mapbox GL JS 的 access token
+      accessToken = ""
+      # 浅色主题的地图样式
+      lightStyle = "mapbox://styles/mapbox/light-v10?optimize=true"
+      # 深色主题的地图样式
+      darkStyle = "mapbox://styles/mapbox/dark-v10?optimize=true"
+      # 是否添加 NavigationControl
+      navigation = true
+      # 是否添加 GeolocateControl
+      geolocate = true
+      # 是否添加 ScaleControl
+      scale = true
+      # 是否添加 FullscreenControl
+      fullscreen = true
+    # LoveIt 更改 | 0.2.0 文章页面的分享信息设置
+    [params.page.share]
+      enable = true
+      Twitter = false
+      Facebook = false
+      Linkedin = false
+      Whatsapp = false
+      Pinterest = false
+      Tumblr = false
+      HackerNews = false
+      Reddit = false
+      VK = false
+      Buffer = false
+      Xing = false
+      Line = true
+      Instapaper = false
+      Pocket = false
+      Flipboard = false
+      Weibo = true
+      Blogger = false
+      Baidu = false
+      Odnoklassniki = false
+      Evernote = true
+      Skype = false
+      Trello = false
+      Mix = false
+    # LoveIt 更改 | 0.2.0 评论系统设置
+    [params.page.comment]
+      enable = false
+      # Disqus 评论系统设置
+      [params.page.comment.disqus]
+        # LoveIt 新增 | 0.1.1
+        enable = false
+        # Disqus 的 shortname，用来在文章中启用 Disqus 评论系统
+        shortname = ""
+      # Gitalk 评论系统设置
+      [params.page.comment.gitalk]
+        # LoveIt 新增 | 0.1.1
+        enable = false
+        owner = ""
+        repo = ""
+        clientId = ""
+        clientSecret = ""
+      # Valine 评论系统设置
+      [params.page.comment.valine]
+        enable = false
+        appId = ""
+        appKey = ""
+        placeholder = ""
+        avatar = "mp"
+        meta= ""
+        pageSize = 10
+        # 为空时自动适配当前主题 i18n 配置
+        lang = ""
+        visitor = true
+        recordIP = true
+        highlight = true
+        enableQQ = false
+        serverURLs = ""
+        # LoveIt 新增 | 0.2.6 emoji 数据文件名称, 默认是 "google.yml"
+        # ["apple.yml", "google.yml", "facebook.yml", "twitter.yml"]
+        # 位于 "themes/LoveIt/assets/lib/valine/emoji/" 目录
+        # 可以在你的项目下相同路径存放你自己的数据文件:
+        # "assets/lib/valine/emoji/"
+        emoji = ""
+      # Facebook 评论系统设置
+      [params.page.comment.facebook]
+        enable = false
+        width = "100%"
+        numPosts = 10
+        appId = ""
+        # 为空时自动适配当前主题 i18n 配置
+        languageCode = "zh_CN"
+      # LoveIt 新增 | 0.2.0 Telegram Comments 评论系统设置
+      [params.page.comment.telegram]
+        enable = false
+        siteID = ""
+        limit = 5
+        height = ""
+        color = ""
+        colorful = true
+        dislikes = false
+        outlined = false
+      # LoveIt 新增 | 0.2.0 Commento 评论系统设置
+      [params.page.comment.commento]
+        enable = false
+      # LoveIt 新增 | 0.2.5 utterances 评论系统设置
+      [params.page.comment.utterances]
+        enable = false
+        # owner/repo
+        repo = ""
+        issueTerm = "pathname"
+        label = ""
+        lightTheme = "github-light"
+        darkTheme = "github-dark"
+      # giscus comment 评论系统设置 (https://giscus.app/zh-CN)
+      [params.page.comment.giscus]
+        # 你可以参考官方文档来使用下列配置
+        enable = false
+        repo = ""
+        repoId = ""
+        category = "Announcements"
+        categoryId = ""
+        # 为空时自动适配当前主题 i18n 配置
+        lang = ""
+        mapping = "pathname"
+        reactionsEnabled = "1"
+        emitMetadata = "0"
+        inputPosition = "bottom"
+        lazyLoading = false
+        lightTheme = "light"
+        darkTheme = "dark"
+    # LoveIt 新增 | 0.2.7 第三方库配置
+    [params.page.library]
+      [params.page.library.css]
+        # someCSS = "some.css"
+        # 位于 "assets/"
+        # 或者
+        # someCSS = "https://cdn.example.com/some.css"
+      [params.page.library.js]
+        # someJavascript = "some.js"
+        # 位于 "assets/"
+        # 或者
+        # someJavascript = "https://cdn.example.com/some.js"
+    # LoveIt 更改 | 0.2.10 页面 SEO 配置
+    [params.page.seo]
+      # 图片 URL
+      images = []
+      # 出版者信息
+      [params.page.seo.publisher]
+        name = ""
+        logoUrl = ""
 
 [menu]
   [[menu.main]]             # config your menu              # 配置目录
@@ -162,3 +466,10 @@ theme = "LoveIt"
   changefreq = "weekly"
   filename = "sitemap.xml"
   priority = 0.5
+
+[outputs]
+  home = ["HTML", "RSS", "JSON"]
+
+# LoveIt 新增 | 0.2.0 网站分析配置
+[params.analytics]
+  enable = false
